extends AnimatableBody2D

@onready var anime: AnimationPlayer = $anime
@onready var respawn_timer: Timer = $respawn_timer
@onready var respawn_position := global_position

@export var reset_timer := 3.0

var velocity := Vector2.ZERO
var gravity = ProjectSettings.get_setting("physics/2d/default_gravity");
var is_triggered := false

# Called when the node enters the scene tree for the first time.
func _ready():
	set_physics_process(false)

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _physics_process(delta: float):
	velocity.y += gravity * delta
	position += velocity * delta

func has_collided_with(_collision: KinematicCollision2D, _collider: CharacterBody2D):
	if !is_triggered:
		is_triggered = true
		anime.play("shake")
		velocity = Vector2.ZERO

func _on_anime_animation_finished(_anim_name: StringName) -> void:
	set_physics_process(true)
	respawn_timer.start(reset_timer)


func _on_respawn_timer_timeout() -> void:
	set_physics_process(false)
	global_position = respawn_position
	if is_triggered:
		var spawn_tween = create_tween().set_trans(Tween.TRANS_BOUNCE).set_ease(Tween.EASE_IN_OUT)
		spawn_tween.tween_property($"Elements02","scale",Vector2(1,1),0.2).from(Vector2(0,0))
		is_triggered = false
	#Ver o final do v√≠deo depois de 11:41 para finalizar aqui
